FIks at tester ikke ble kjørt og at de var røde da de ble kjørt (#39)
* Få failsafe til å kjøre IT-testene

* fjern ugyldig opsjon i docker-compose kommandoen som hindret docker-compose i å starte

* Gjør tester grønne

* refaktorering